--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body class="text-center" background="background.jpg">
+<body class="text-center" background="backgorund.jpg">
   <h3 style="color:black">Filtro Em Tempo Real</h3>
   <hr>
   <button onclick="take_snapshot()" class="btn" style="background-color:blueviolet;color:white;">Tire Uma Foto</button>
